# doctec

./: .gitignore  README.md  eslint.config.mjs  index.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json
doctec/: cmd.py  ctx.py  emb_extractor.py  index.py  models.py  schemas.py  utils.py
doctec/db/: db_model.py  emb_detection_repo.py  emb_detection_types.py  get_data_from_db.py  save_data_to_db.py
doctec/repos/: emb_detection_repo.py
doctec/tasks/: base.py  emb_detection.py  emb_detection_types.py
doctec/tests/: test_db.py
doctec/utils/: loggings.py  peewees.py
maldocument/: detect.py
maldocument/doc/: detect.py  extractFeature.py  get_doc_feature.py  officeparser.py  olevba.py  random_forest_model.pkl  vbaDoc.py
maldocument/docx/: detect.py  extractFeature.py  msodde.py  oleDocx.py  random_forest_model.pkl  vbaDocx.py  xmlDocx.py  xml_feature.py
maldocument/pdf/: detect.py  pdfid.py  random_forest_model.pkl  utils.py
maldocument/shared/: feature_analysis.py
progress/: progress.md
public/: index.html
public/schemas/: EmbDetectionConfigData.schema.json  EmbDetectionResultDataWithoutRun.schema.json  EmbDetectionRunData.schema.json  EmbeddedFileData.schema.json  FileBodyData.schema.json  (+2 more)
scripts/: gene_jsonschema.py  mock_data.py  ts2js.py
src/: App.css  App.js  App.jsx  App.tsx  eel.js  index.css  index.js  index.jsx  index.tsx  types.d.ts  types.js  utils.js  utils.ts
tests/: conftest.py  function4.py  get_metadata.py  get_reg.py  test_db.py  test_delete_run.py  test_serde.py
(+83 files in other folders)
