[tool.poetry]
name = "doctec"
version = "0.1.0"
description = ""
authors = ["limoiie <limo.iie4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Eel = "^0.17.0"
pyinstaller = "^6.11.1"
pythonnet = "^3.0.5"
peewee = "^3.17.8"
pydantic = "^2.10.3"
fire = "^0.7.0"
werkzeug = "^3.1.3"
faker = "^35.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
